// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons <BlogIcon /> renders unchanged 1`] = `
<div>
  <svg
    data-testid="icon-blog"
    fill="none"
    fill-rule="evenodd"
    height="24px"
    preserveAspectRatio="xMidYMid meet"
    stroke="currentColor"
    stroke-width="1"
    style="vertical-align: middle;"
    viewBox="0 0 24 24"
    width="24px"
  >
    <path
      d="M8.49188 11.265L7.43188 15.508L11.6739 14.447L18.0379 8.083L14.8559 4.901L8.49188 11.265Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M21.751 4.37097L22.811 5.43097C22.9504 5.57027 23.061 5.73567 23.1364 5.91772C23.2119 6.09978 23.2507 6.29491 23.2507 6.49197C23.2507 6.68904 23.2119 6.88417 23.1364 7.06622C23.061 7.24827 22.9504 7.41367 22.811 7.55297L19.5 10.863"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M18.038 8.083L21.751 4.371C22.0322 4.0897 22.1901 3.70824 22.1901 3.3105C22.1901 2.91275 22.0322 2.53129 21.751 2.25L20.69 1.189C20.4087 0.90779 20.0272 0.749817 19.6295 0.749817C19.2317 0.749817 18.8502 0.90779 18.569 1.189L14.856 4.9"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M18.75 14.25V21.75C18.75 22.1478 18.592 22.5294 18.3107 22.8107C18.0294 23.092 17.6478 23.25 17.25 23.25H2.25C1.85218 23.25 1.47064 23.092 1.18934 22.8107C0.908035 22.5294 0.75 22.1478 0.75 21.75V6.75C0.75 6.35218 0.908035 5.97064 1.18934 5.68934C1.47064 5.40804 1.85218 5.25 2.25 5.25H9.75"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;

exports[`icons <CheckIcon /> renders unchanged 1`] = `
<div>
  <svg
    data-testid="icon-check"
    fill="currentColor"
    fill-rule="evenodd"
    height="24px"
    preserveAspectRatio="xMidYMid meet"
    stroke="none"
    stroke-width="1"
    style="vertical-align: middle;"
    viewBox="0 0 24 24"
    width="24px"
  >
    <path
      d="M9.3 16.7l-3.1-4.3A1 1 0 0 1 7.8 11l3.7 3.9c.6.6.6 1.6 0 2.1-.7.5-1.7.4-2.2-.3z"
    />
    <path
      d="M9.6 17c-.7-.6-.7-1.5-.2-2.2l7.3-8a1 1 0 0 1 1.6 1.3l-6.6 8.6c-.5.7-1.5.8-2.1.3z"
    />
    <path
      d="M9.7 13c.4.5.7.8 1.1.3.5-.5-.1 1.3-.1 1.3l-1.5-.5.5-1z"
    />
  </svg>
</div>
`;

exports[`icons <EcommerceIcon /> renders unchanged 1`] = `
<div>
  <svg
    data-testid="icon-ecommerce"
    fill="none"
    fill-rule="evenodd"
    height="24px"
    preserveAspectRatio="xMidYMid meet"
    stroke="currentColor"
    stroke-width="1"
    style="vertical-align: middle;"
    viewBox="0 0 24 24"
    width="24px"
  >
    <path
      d="M3.75 5.25001C3.74961 4.96756 3.80495 4.6878 3.91286 4.42677C4.02076 4.16574 4.17912 3.92857 4.37884 3.72885C4.57857 3.52912 4.81574 3.37077 5.07677 3.26286C5.33779 3.15496 5.61755 3.09961 5.9 3.10001"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M0.75 4.687C0.75 3.64284 1.16479 2.64145 1.90312 1.90312C2.64145 1.16479 3.64284 0.75 4.687 0.75"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M10.5001 16.5H7.6731C7.39125 16.5008 7.11717 16.4077 6.89422 16.2353C6.67127 16.0628 6.51217 15.821 6.4421 15.548L4.5421 9.061C4.49636 8.87508 4.49359 8.68119 4.534 8.49405C4.57441 8.3069 4.65694 8.13143 4.77532 7.98095C4.89369 7.83047 5.04481 7.70895 5.21718 7.62561C5.38955 7.54228 5.57864 7.49932 5.7701 7.5H18.9801C19.1719 7.49866 19.3614 7.54116 19.5343 7.62424C19.7071 7.70732 19.8587 7.82878 19.9775 7.97937C20.0962 8.12996 20.179 8.30569 20.2195 8.49314C20.26 8.68059 20.2571 8.87482 20.2111 9.061L19.9001 10.116"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M16.4999 7.5L15.6709 3.75"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M9 7.5L9.828 3.75"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M23.135 23.25L23.235 22.128C23.301 21.4017 23.1001 20.6762 22.67 20.0873C22.2399 19.4983 21.6099 19.0862 20.898 18.928L16.726 18V12C16.726 11.6022 16.5679 11.2206 16.2866 10.9393C16.0053 10.658 15.6238 10.5 15.226 10.5C14.8282 10.5 14.4466 10.658 14.1653 10.9393C13.884 11.2206 13.726 11.6022 13.726 12V21.75L12.026 20.472C11.731 20.2504 11.3659 20.1428 10.9979 20.1688C10.6298 20.1949 10.2836 20.3528 10.0227 20.6137C9.7618 20.8746 9.60383 21.2209 9.5778 21.5889C9.55176 21.9569 9.65942 22.322 9.88098 22.617L10.355 23.25"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;

exports[`icons <PortfolioIcon /> renders unchanged 1`] = `
<div>
  <svg
    data-testid="icon-portfolio"
    fill="none"
    fill-rule="evenodd"
    height="24px"
    preserveAspectRatio="xMidYMid meet"
    stroke="currentColor"
    stroke-width="1"
    style="vertical-align: middle;"
    viewBox="0 0 24 24"
    width="24px"
  >
    <path
      d="M6.43308 15.749C6.06531 14.8383 5.92674 13.8512 6.02954 12.8744C6.13233 11.8976 6.47335 10.961 7.02265 10.1468C7.57196 9.33253 8.31275 8.66561 9.17999 8.20454C10.0472 7.74347 11.0144 7.50235 11.9966 7.50235C12.9788 7.50235 13.9459 7.74347 14.8132 8.20454C15.6804 8.66561 16.4212 9.33253 16.9705 10.1468C17.5198 10.961 17.8608 11.8976 17.9636 12.8744C18.0664 13.8512 17.9279 14.8383 17.5601 15.749"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M10.1551 7.78601L11.8461 10.048C11.9643 10.2056 12.0503 10.3849 12.0992 10.5757C12.1481 10.7666 12.1589 10.9651 12.131 11.1601C12.1032 11.3551 12.0372 11.5428 11.9368 11.7123C11.8364 11.8817 11.7037 12.0298 11.5461 12.148L9.74609 13.498V14.248C9.74609 14.6458 9.58806 15.0274 9.30675 15.3087C9.02545 15.59 8.64392 15.748 8.24609 15.748"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M17.629 11.427L15.323 12.587C15.0175 12.7396 14.7732 12.9918 14.6305 13.302C14.4878 13.6121 14.4551 13.9618 14.538 14.293L14.91 15.749"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M6.74609 2.24799V0.747986"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M17.2461 2.24799V0.747986"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M7.5 18.748C7.5 19.1458 7.65804 19.5273 7.93934 19.8086C8.22064 20.09 8.60218 20.248 9 20.248H15C15.3978 20.248 15.7794 20.09 16.0607 19.8086C16.342 19.5273 16.5 19.1458 16.5 18.748"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M22.2461 15.748H1.74609C1.19381 15.748 0.746094 16.1957 0.746094 16.748V22.248C0.746094 22.8003 1.19381 23.248 1.74609 23.248H22.2461C22.7984 23.248 23.2461 22.8003 23.2461 22.248V16.748C23.2461 16.1957 22.7984 15.748 22.2461 15.748Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
    <path
      d="M3 15.748V3.74799C3 3.35016 3.15804 2.96863 3.43934 2.68733C3.72064 2.40602 4.10218 2.24799 4.5 2.24799H19.5C19.8978 2.24799 20.2794 2.40602 20.5607 2.68733C20.842 2.96863 21 3.35016 21 3.74799V15.748"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;
